# lupax

./: CODE_OF_CONDUCT.md  LICENSE  README.md
.github/workflows/: pytest.yml
backend/: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0bbe48c46baa_tips_alert.py  4c37f7de847c_deletes.py  7aa300c2911a_base0.py  81ac810d1e28_clicks.py  99523daf46ee_baseline.py  d72243e4948b_preferences_and_notifications.py  dc4e32c435af_participation_user_null_true.py  e24a89f7036d_photo_perfil.py
backend/sql_app/: __init__.py  crud.py  database.py  dependencies.py  main.py  models.py  schemas.py  test_main.py
backend/sql_app/models/: models.py
backend/sql_app/routers/: admin.py  notifications.py  participation.py  storage.py  studies.py  tasks.py  teams.py  users.py
backend/sql_app/schemas/: schemas.py
backend/sql_app/services/: crud.py  notifications_service.py  participations_service.py  storage_services.py  studies_service.py  tasks_service.py  teams_service.py  users_service.py
backend/sql_app/utils/: gravatar.py  storage.py
chrome_extension/: README.md  background.js  content-script.js  manifest.json
chrome_extension/js/: cookie-service.js  uuid-service.js
frontend/: .env  Dockerfile  README.md  env.sh  interfaces.ts  next.config.js  package-lock.json  package.json
frontend/components/: barPage.tsx  barStudie.tsx  card.tsx  centerInfo.tsx  createStudieDrawer.tsx  createTaskDrawer.tsx  createTeamDrawer.tsx  drawer.tsx  failedToLoad.tsx  loading.tsx  main.tsx  privacy.tsx  (+1 more)
(+52 files in other folders)
