[tool.poetry]
name = "lupax-api"
version = "1.0.1"
description = "lupax api"
authors = ["Fernando Menéndez Menéndez <UO251800@uniovi.es>"]

[tool.poetry.dependencies]


python = "^3.9.5"
fastapi = "^0.68.1"
uvicorn = "^0.17.5"
SQLAlchemy = "^1.4.31"
SQLAlchemy-Utils = "^0.38.2"
alembic = "^1.7.6"
supertokens-python = "^0.11.0"
pydantic = "^1.9.0"
python-dotenv = "^0.19.2"
sentry-sdk = "^1.5.6"
google-cloud-storage = "^2.3.0"
psycopg2-binary = "^2.9.5"
httpx = "^0.23.3"
pytest = "^7.2.1"



[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
